with hours preview2

--- a/replay.html
+++ b/replay.html
@@ -37,15 +37,14 @@
                         <input type="datetime" />
 
                         <div class="replay-player">
-                            <ul class="replay-timeline-title">
-                                <li>hours</li>                                
+                            <ul class="replay-timeline-title">              
                                 <li>Pre-checkin</li>
                                 <li>Temps de transit</li>
                                 <li class="replay-timeline-title">Nombre de départ</li>
                             </ul>
 
                             <ul class="replay-timeline-group" id="handledZone">
-                                <li class="replay-timeline" id="abscisseHoursId">
+                                <li  id="abscisseHoursId">
                                 </li>
                                 <li class="replay-timeline" id="preCheckinId">
                                 </li>
